========================
   beancount: CHANGES
========================
Note: This file contains a list changes in the 'master' branch.


2020-09-12

 - Released 2.3.2.


2020-09-07

 - Fixed #401: Fixed initialization bugs on min() and max() functions for the SQL
   aggregator.
 - Fixed #364: Fixed important core bug in how the CostSpec were converted to
   Cost for cost specs with total and per-unit cost numbers, like this {106.935
   # 6.98 USD}. For short positions, the cost was computed as negative. In a
   sense this was a naive bug, but a very important one. This occurred only for
   short positions.


2020-08-19

 - Added an option to the printer to allow an arbitraty Python value to be
   output. This is useful when creating values programmatically with types not
   supported by the syntax.


2020-07-25

 - Release 2.3.1 as dependency for beanprice.
 - Moved beancount.prices.find_prices to beancount.ops.find_prices in
   preparation of moving price fetching code to a new 'beanprice' repository.


2020-07-17

 - Fixed bug #508 in beancount.plugins.unique_prices.


2020-07-06

 - Updated export script to honor lowercase "ignore" instead of "IGNORE" and set
   default tax type to "taxable" instead of "TAXABLE" so that changes in PR 472
   don't pick up the metadata as currencies.


2020-07-05

 - Removed bean-report and all associated codes. Use bean-query instead (or
   Fava).
 - Removed bean-web and bean-bake (for v3). Use Fava instead.
 - Moved beancount.web.scrape to beancount.utils.scrape in preparation of
   removing beancount.web.
 - Removed experiments/portfolio for its dependency on beancount.reports code
   (this script was obsolete anyway).
 - Moved get_assets_holdings() function out of reports code to preserve it for
   use by an experimental script (in preparation for removing beancount.reports).
 - Moved beancount.scripts.tutorial to beancount.reports.tutorial in preparation
   of removing beancount.reports and beancount.web.